feat: 문자열로 위치와 기물의 정보를 받으면 체스판에 기물을 추가하는 기능 추가